--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -143,4 +143,11 @@ if count > 4:
 	{{pass}}
 </div>
 
+<div>
+在线编写python程序
+<iframe width="800" height="500" frameborder="0"
+        src="http://pythontutor.com/iframe-embed.html#code=x+%3D+5%0Ay+%3D+10%0Az+%3D+x+%2B+y&cumulative=false&py=2&curInstr=3">
+</iframe>
+
+</div>
 {{end}}
