--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -145,8 +145,8 @@ if count > 4:
 
 <div>
 <h3>在线编写python程序</h3>
-<iframe width="800" height="800" frameborder="0"
-        src="http://pythontutor.com/visualize.html#code=x+%3D+5%0Ay+%3D+10%0Az+%3D+x+%2B+y&cumulative=false&py=2&curInstr=3">
+<iframe width=100% height="800" frameborder="0"
+        src="http://pythontutor.com/web_exec_py2.py?user_script=s+%3D+%22100%22%0Aa+%3D+100%0Aprint+a+%2B+100%0Aprint+s+%2B+%22100%22&cumulative_mode=false">
 </iframe>
 
 </div>
