--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -146,7 +146,7 @@ if count > 4:
 <div>
 <h3>在线编写python程序</h3>
 <iframe width=100% height="800" frameborder="0"
-        src="http://pythontutor.com/visualize.html#code=x+%3D+100%0As1%3D+%22100%22%0Aprint+x%2Bx%0Aprint+s1%2Bs1&mode=display&cumulative=false&py=2&curInstr=4"
+src="http://pythontutor.com/visualize.html#code=x+%3D+100%0As1%3D+%22100%22%0Aprint+x%2Bx%0Aprint+s1%2Bs1&mode=display&cumulative=false&py=2&curInstr=0">
 </iframe>
 
 </div>
