modify link color

--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -139,7 +139,7 @@ if count > 4:
 
 <div style="background:#4183c4;" class="styleguide-color">
 	{{for n in cont9:}}
-	<li><a href=/content_show/{{=n.id}}>{{=n.title}}</a></li>
+	<li><a style="color:#ffffff" href=/content_show/{{=n.id}}>{{=n.title}}</a></li>
 	{{pass}}
 </div>
 
