--- a/apps/cms/templates/cms_layout.html
+++ b/apps/cms/templates/cms_layout.html
@@ -8,6 +8,9 @@
     {{end}}
     <title>{{=site.name}}</title>
     <!-- toplinks -->
+
+<link rel="stylesheet" type="text/css" href="/static/css/kh.css" />
+
     {{use "bootstrap"}}
     <link href="/static/css/github-bd7a9aac1964f57509ff6d9dbddc6e086343bca4.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/static/css/github2-8fa43eb7ec103bd3bf79be09cf64db52d75c244f.css" media="screen" rel="stylesheet" type="text/css" />
@@ -17,6 +20,26 @@
 
     <script src="/static/js/frameworks-eee761b9d5e06efb064aaaf528c44ef8e1601e71.js" type="text/javascript"></script>
     <script src="/static/js/github-e2238760e924ccb9d1992d97a62b75eef6f3bc8b.js" type="text/javascript"></script>
+
+<script type="text/javascript" src="/static/js/jquery.promptumenu.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/css/promptumenu.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/cms.css" />
+<script type="text/javascript">
+        $(function(){
+                $('.indexmain ul').promptumenu(
+                {
+                        width:900,
+                        height:500,
+                        rows: 2,
+                        columns: 3,
+                        direction: 'horizontal',
+                        pages: true
+                }
+                );
+        });
+</script>
+
+
 
     {{block _css}}{{end}}
   </head>
@@ -34,13 +57,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">{{block project}}Cpython 中蟒联盟{{end}}</a>
+      <a class="brand" href="/">{{block project}}CPython 中蟒联盟{{end}}</a>
       <div class="nav-collapse">
         {{block nav}}
         <ul class="nav">
 	  {{for n in cate:}}
           <li class="active"><a href="/category_show/{{=n.id}}">{{=n.name}}</a></li>
 	  {{pass}}
+          <li class="active"><a href=http://uliweb.cpython.org/forum/3>技术问答</a></li>
         </ul>
         {{end}}
       </div><!--/.nav-collapse -->
