modify category show 'image src' bug

--- a/apps/cms/templates/category_show.html
+++ b/apps/cms/templates/category_show.html
@@ -13,7 +13,7 @@
 <div class="cmswell">
   <div class="box cutout" style="float:left;">
    <span class="image-wrap " style="position:relative; display:inline-block; background:url({{=n.image}}) no-repeat center center; width: 100px; height: 100px;">
-    <img src={{=n.image}} style="opacity: 0;">
+    <img src="{{=n.image}}" style="opacity: 0;">
     </span>
    </div> 
    <div style="position:relative;left:20px;margin-left: 20px">
