add online code address

--- a/apps/admin/templates/admin.html
+++ b/apps/admin/templates/admin.html
@@ -49,6 +49,14 @@
 		<td><a href="/admin/category_del/{{=n.id}}">删除内容</a> </td>
 	</tr>
 	{{pass}}
+	<tr>
+		<td><input class="input-mini" type="text" placeholder=".input-mini" value=0></td>
+		<td>在线代码 </td>
+		<td>#</td>
+		<td><a href="/admin/onlinecode_list">查看内容</a> </td>
+		<td>#</td>
+	</tr>
+
 	</tbody>
 	</table>
     	</div>
