--- a/apps/cms/templates/cms_layout.html
+++ b/apps/cms/templates/cms_layout.html
@@ -65,6 +65,7 @@
           <li class="active"><a href="/category_show/{{=n.id}}">{{=n.name}}</a></li>
 	  {{pass}}
           <li class="active"><a href=http://uliweb.cpython.org/forum/3>技术问答</a></li>
+          <li class="active"><a href=/onlinecode_all>在线编程</a></li>
         </ul>
         {{end}}
       </div><!--/.nav-collapse -->
