--- a/apps/admin/templates/login.html
+++ b/apps/admin/templates/login.html
@@ -1,5 +1,4 @@
-{{extend "head.html"}}
-
+{{block user_info}}{{end}}
 {{block content}}
 <div class="content">
     <div class="box center col_10 box_shadow">
