--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -4,13 +4,58 @@
 {{from cms.views import get_category_by_order}}
 <div class="row">
 
+<div class="span6" style="padding:20px 0 0 50px">
+
 {{contents0,cate0 = get_category_by_order(0)}}
+
+
+{{for n in contents0:}}
+<ul class='records'>
+<li class='record'>
+<div class='userinfo'>
+ <img alt="" src={{=n.image}} width="100" height="100" />
+</div>
+
+<h3 class='title'>
+	{{=n.title}}
+</h3>
+
+<div class='desc'>
+<time datetime=''>
+
+</time>
+</div>
+<div class='desc description'>
+<p>
+	{{=n.content[:200]}}
+</p>
+
+</div>
+
+<br>
+<div class='desc'>
+  <p class='tags'>
+  <a class="btn" href="">观看视频</a>
+</p>
+</div>
+
+</li>
+
+</ul>
+<div class="vertical-expander-30" ></div>
+{{pass}}
+
+
+
+</div>
+
+{{contents1,cate1 = get_category_by_order(1)}}
   <div class="span6">
    <div class="boxed-group .warn">
-    <h3>{{if cate0:}}{{=cate0.name}}{{pass}}</h3>
+    <h3>{{if cate1:}}{{=cate1.name}}{{pass}}</h3>
     <div class="boxed-group-inner markdown-body">
 <ul class="boxed-group-list">
-{{for n in contents0:}}
+{{for n in contents1:}}
       <li class="linked-item .warn"><a href=/content_show/>{{=n.title}}</a></li>
 {{pass}}
 </ul>
@@ -19,13 +64,13 @@
   </div> <!--span6-->
 
 
-{{contents1,cate1 = get_category_by_order(1)}}
+{{contents2,cate2 = get_category_by_order(2)}}
   <div class="span5">
    <div class="boxed-group">
-    <h3>{{if cate1:}}{{=cate1.name}}{{pass}}</h3>
+    <h3>{{if cate2:}}{{=cate2.name}}{{pass}}</h3>
     <div class="boxed-group-inner markdown-body">
 <ul class="boxed-group-list">
-{{for n in contents1:}}
+{{for n in contents2:}}
       <li class="linked-item .message"> <a href=/content_show/>{{=n.title}}</a></li>
 {{pass}}
 </ul>
@@ -36,13 +81,13 @@
 </div> <!--row-->
 
 
-{{contents2,cate2 = get_category_by_order(2)}}
+{{contents3,cate3 = get_category_by_order(3)}}
  <div class="boxed-group">
-    <h3>{{if cate2:}}{{=cate2.name}}{{pass}}</h3>
+    <h3>{{if cate3:}}{{=cate3.name}}{{pass}}</h3>
     <div class="boxed-group-inner markdown-body">
  
 
-{{for n in contents2:}}
+{{for n in contents3:}}
 
 <div class="discussion-bubble">
       <img class="discussion-bubble-avatar" width="48" height="48" src={{=n.image}}>
