video template for first

--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -35,7 +35,7 @@
 <br>
 <div class='desc'>
   <p class='tags'>
-  <a class="btn" href="">观看视频</a>
+  <a class="btn" href="/showcontent/{{=n.id}}">观看视频</a>
 </p>
 </div>
 
