公益活动页面

--- a/apps/admin/templates/base.html
+++ b/apps/admin/templates/base.html
@@ -9,8 +9,8 @@
     <link href="/static/css/docs.css" rel="stylesheet">
 
     <link href="/static/css/cms.css" rel="stylesheet">
-
-
+{{from admin.views import common}}
+{{cates = common() }}
 </head>
 <div class="container">
   <div class="row">
