--- a/apps/cms/templates/showcontent.html
+++ b/apps/cms/templates/showcontent.html
@@ -1,12 +1,70 @@
 {{extend "cms_layout.html"}}
 {{block content}}
 
-<div class="row">
+{{from cms.views import get_category_by_order}}
 
-<div class="span6" style="padding:20px 0 0 50px">
+{{contents0,cate0 = get_category_by_order(0)}}
+<div class="wrapper clearfix" ng-controller="MainCtrl" x-drag-drop-project x-bind-keyboard-shortcuts>
 
-	{{=c1.content}}
+<!-- Sidebar -->
+<div class="sidebar" ng-controller="SidebarCtrl">
+    <ul>
+        <li ng-repeat="project in projects">
+            <a href="/" >活动说明</a>
+        </li>
+	{{for n in contents0:}}
+        <li ng-repeat="project in projects">
+            <a href="/showcontent/{{=n.id}}" >{{=n.title}}</a>
+        </li>
+	{{pass}}
+    </ul>
+
+    <div class="controls">
+	<i class="icon-book icon-white" style="padding:0 10px 0 10px"></i>
+	<i class="icon-heart icon-white" style="padding:0 10px 0 10px"></i>
+	<i class="icon-glass icon-white" style="padding:0 10px 0 10px"></i>
+	<i class="icon-tags icon-white" style="padding:0 10px 0 10px"></i>
+	<i class="icon-music icon-white" style="padding:0 10px 0 10px"></i>
+    </div>
+
+</div>
+<!-- Sidebar ends -->
+
+
+<div class="main">
+
+<!-- App title bar -->
+<div class="title-bar" ng-controller="TitlebarCtrl">
+    <div class="controls">
+	<i class="icon-book" style="margin:10px 10px 10px 10px"></i>
+	<i class="icon-film" style="margin:10px 10px 10px 10px"></i>
+	<i class="icon-camera" style="margin:10px 10px 10px 10px"></i>
+	<i class="icon-resize-full" style="margin:10px 10px 10px 10px"></i>
+    </div>
+</div>
+
+
+<!--File list and project view -->
+<div class="content clearfix" ng-controller="FilesCtrl">
+    <div class="content-wrap clearfix" ng-class="{'show-options' : selectedFile.id}">
+        <div ng-switch on="routePath">
+            <div ng-switch-when="home" class="home">
+
+            </div>
+		
+		<div>{{<<c1.content}} </div>
+        </div>
+    </div>
 </div>
 </div>
+</div>
+
+
+
+
+  
+
+
+
 
 {{end}}
