--- a/apps/apply/templates/new.html
+++ b/apps/apply/templates/new.html
@@ -4,13 +4,12 @@
     
     {{block content}} 
 <div class="content" style="padding:20px 20px 20px 20px;">
-    <h2> 请您先确认课程ID：</h2>
-    <hr>
 		{{<<form}} 
   
 </div>
 
-<div class="content" style="padding:20px 20px 20px 20px;">
+<div class="content" style="padding:0px 20px 20px 20px">
+    <h2> 请您先确认课程ID：</h2>
     <table class="table table-condensed">
     <thead>
     <tr>
