--- a/apps/admin/templates/ApplyView/view.html
+++ b/apps/admin/templates/ApplyView/view.html
@@ -5,6 +5,6 @@
 {{<< view}}
 <div>
 <a href="/admin/apply/edit/{{=object.id}}">编辑</a>
-<a href="/admin/apply/{{=object.id}}">删除</a>
+<a href="/admin/apply/delete/{{=object.id}}">删除</a>
 </div>
 {{end}}
