--- a/apps/admin/templates/CourseView/view.html
+++ b/apps/admin/templates/CourseView/view.html
@@ -5,6 +5,6 @@
 {{<< view}}
 <div>
 <a href="/admin/course/edit/{{=object.id}}">编辑</a>
-<a href="/admin/course/{{=object.id}}">删除</a>
+<a href="/admin/course/delete/{{=object.id}}">删除</a>
 </div>
 {{end}}
