--- a/apps/cms/templates/cms_layout.html
+++ b/apps/cms/templates/cms_layout.html
@@ -48,7 +48,8 @@
           <li class="active"><a href="/">{{=n.name}}</a></li>
 	  {{pass}}
           <li ><a href="/new">立即报名</a></li>
-          <li ><a href="/showapply">已经确认名单</a></li>
+          <li ><a href="/showapply">已确认名单</a></li>
+          <li ><a href="/showcourses">课程列表</a></li>
         </ul>
         {{end}}
       </div><!--/.nav-collapse -->
