--- a/apps/cms/templates/index.html
+++ b/apps/cms/templates/index.html
@@ -20,11 +20,11 @@
     </ul>
 
     <div class="controls">
-	<i class="icon-book icon-white" style="padding:0 10px 0 10px"></i>
-	<i class="icon-heart icon-white" style="padding:0 10px 0 10px"></i>
-	<i class="icon-glass icon-white" style="padding:0 10px 0 10px"></i>
-	<i class="icon-tags icon-white" style="padding:0 10px 0 10px"></i>
-	<i class="icon-music icon-white" style="padding:0 10px 0 10px"></i>
+	<i class="icon-book icon-white" style="margin:0 10px 0 10px"></i>
+	<i class="icon-heart icon-white" style="margin:0 10px 0 10px"></i>
+	<i class="icon-glass icon-white" style="margin:0 10px 0 10px"></i>
+	<i class="icon-tags icon-white" style="margin:0 10px 0 10px"></i>
+	<i class="icon-music icon-white" style="margin:0 10px 0 10px"></i>
     </div>
 
 </div>
