add course show

--- a/apps/apply/templates/showcourses.html
+++ b/apps/apply/templates/showcourses.html
@@ -9,7 +9,7 @@
     <table class="table table-condensed">
     <thead>
     <tr>
-    <th>序号</th>
+    <th>课程ID</th>
     <th>名称</th>
     <th>地址城市</th>
     <th>时间</th>
