--- a/apps/cms/templates/showcontent.html
+++ b/apps/cms/templates/showcontent.html
@@ -20,11 +20,11 @@
     </ul>
 
     <div class="controls">
-	<i class="icon-book icon-white" style="margin:0 10px 0 10px"></i>
-	<i class="icon-heart icon-white" style="margin:0 10px 0 10px"></i>
-	<i class="icon-glass icon-white" style="margin:0 10px 0 10px"></i>
-	<i class="icon-tags icon-white" style="margin:0 10px 0 10px"></i>
-	<i class="icon-music icon-white" style="margin:0 10px 0 10px"></i>
+	<i class="icon-book icon-white" style="margin:0 5px 0 5px"></i>
+	<i class="icon-heart icon-white" style="margin:0 5px 0 5px"></i>
+	<i class="icon-glass icon-white" style="margin:0 5px 0 5px"></i>
+	<i class="icon-tags icon-white" style="margin:0 5px 0 5px"></i>
+	<i class="icon-music icon-white" style="margin:0 5px 0 5px"></i>
     </div>
 
 </div>
@@ -52,7 +52,7 @@
 
             </div>
 		
-		<div>{{<<c1.content}} </div>
+		<div style="overflow-y:scroll;height:500px">{{<<c1.content}} </div>
         </div>
     </div>
 </div>
